# VectorDB

./: .env.example  README.md  pyproject.toml
src/vectordb/: __init__.py  cli.py  config.py  logging.py  types.py
src/vectordb/api/: __init__.py  app.py  dependencies.py  schemas.py
src/vectordb/api/routes/: health.py
src/vectordb/api/routes/v1/: __init__.py  collections.py  query.py
src/vectordb/benchmarks/: __init__.py  base.py  indexing.py  retrieval.py
src/vectordb/embeddings/: __init__.py  base.py  encoder.py
src/vectordb/indexing/: __init__.py  ann_index.py  base.py
src/vectordb/metadata/: __init__.py  base.py  filters.py  metadata_store.py
src/vectordb/query/: __init__.py  base.py
src/vectordb/retrieval/: __init__.py  base.py  brute_force_search.py  pipeline.py  similarity.py
src/vectordb/storage/: __init__.py  base.py  models.py  serializer.py  storage_engine.py
tests/: conftest.py  test_ann_index.py  test_api_health.py  test_brute_force_search.py  test_config.py  test_encoder.py  test_index_benchmark.py  test_interfaces.py  test_logging.py  test_metadata_filters.py  test_metadata_store.py  test_retrieval_benchmark.py  test_retrieval_pipeline.py  test_similarity.py  test_storage_engine.py
